// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: auto, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "@media (prefers-color-scheme: dark)": {
        "color": "#AFB0B3",
      },
      "color": "#535457",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "@media (prefers-color-scheme: dark)": {
      "color": "#FBFCFF",
    },
    "@media(min-width:1000px)": {
      "clip": "auto",
      "height": "auto",
      "margin": 0,
      "overflow": "visible",
      "padding": 0,
      "position": "static",
      "whiteSpace": "normal",
      "width": "auto",
    },
    "@media(min-width:1300px)": {
      "clip": "rect(0,0,0,0)",
      "height": "1px",
      "margin": "-1px",
      "overflow": "hidden",
      "padding": 0,
      "position": "absolute",
      "whiteSpace": "nowrap",
      "width": "1px",
    },
    "@media(min-width:1760px)": {
      "clip": "auto",
      "height": "auto",
      "margin": 0,
      "overflow": "visible",
      "padding": 0,
      "position": "static",
      "whiteSpace": "normal",
      "width": "auto",
    },
    "@media(min-width:480px)": {
      "clip": "auto",
      "height": "auto",
      "margin": 0,
      "overflow": "visible",
      "padding": 0,
      "position": "static",
      "whiteSpace": "normal",
      "width": "auto",
    },
    "@media(min-width:760px)": {
      "clip": "rect(0,0,0,0)",
      "height": "1px",
      "margin": "-1px",
      "overflow": "hidden",
      "padding": 0,
      "position": "absolute",
      "whiteSpace": "nowrap",
      "width": "1px",
    },
    "clip": "rect(0,0,0,0)",
    "color": "#010205",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "1px",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": "-1px",
    "overflow": "hidden",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "absolute",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "nowrap",
    "width": "1px",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: dark, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: 0 } 1`] = `
{
  "label": {
    "&+&": {
      "color": "#AFB0B3",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#FBFCFF",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "absolute",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "color": "#AFB0B3",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#FBFCFF",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "static",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: light, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: 0 } 1`] = `
{
  "label": {
    "&+&": {
      "color": "#535457",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#010205",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "absolute",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "color": "#535457",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#010205",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "static",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: true, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "color": "#AFB0B3",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "rect(0,0,0,0)",
    "color": "#FBFCFF",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "1px",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": "-1px",
    "overflow": "hidden",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "absolute",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "nowrap",
    "width": "1px",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: true, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "color": "#535457",
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "rect(0,0,0,0)",
    "color": "#010205",
    "cursor": "pointer",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "1px",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": "-1px",
    "overflow": "hidden",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "absolute",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "nowrap",
    "width": "1px",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: true, hideLabel: false, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#7E7F82",
    "cursor": "not-allowed",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "static",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: true, hideLabel: false, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
{
  "label": {
    "&+&": {
      "cursor": "unset",
      "fontSize": "clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)",
      "marginTop": "-4px",
    },
    "&:empty": {
      "display": "none",
    },
    "clip": "auto",
    "color": "#949598",
    "cursor": "not-allowed",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "hyphens": "auto",
    "justifySelf": "flex-start",
    "margin": 0,
    "overflow": "visible",
    "overflowWrap": "break-word",
    "padding": 0,
    "position": "static",
    "transition": "color var(--p-transition-duration, .24s) ease",
    "whiteSpace": "normal",
    "width": "auto",
  },
  "required": {
    "userSelect": "none",
  },
}
`;
